Added the STREAM benchmark, LINPACK makefile tweaks

--- a/stream/makefile
+++ b/stream/makefile
@@ -6,13 +6,12 @@
 # the argument "occ=[file without extension]" when making the executables.
 ###########################################################################
 CC = gcc
-CFLAGS = -Wall -ansi 
+CFLAGS = -ansi
 ###########################################################################
 # ADVANCED COMPILER CONFIGURATION *****************************************
 # Configures standard libraries and compiler flags to ensure portability
 # It's recommended to override these with a separate file as well.
 ###########################################################################
-LFLAGS = -lm
 DFLAG  = -D
 OFLAG  = -o
 ###########################################################################
@@ -21,7 +20,7 @@ OFLAG  = -o
 ###########################################################################
 OVERRIDE   = ../override
 OVERRIDECC = $(OVERRIDE)/cc
-OVERRIDELP = $(OVERRIDE)/linpack
+OVERRIDEST = $(OVERRIDE)/stream
 SDIR       = ./src
 BDIR       = ./bin
 ###########################################################################
@@ -29,42 +28,36 @@ BDIR       = ./bin
 # Change these only if you'd like different names for the executables or
 # have renamed the input source file.
 ###########################################################################
-INPUT = $(SDIR)/linpack.c
-SPOUT = $(BDIR)/linpacksp
-DPOUT = $(BDIR)/linpackdp
+INPUT = $(SDIR)/stream.c
+OUT =   $(BDIR)/stream
 ###########################################################################
-# MISCELLANEOUS OPTIONS ***************************************************
+# MISCELLANEOUS CONFIGURATION *********************************************
 ###########################################################################
-n = 1000
+DARRS = STREAM_ARRAY_SIZE
+n     = 10000000
 ###########################################################################
 # OVERRIDE INCLUDES // DO NOT MODIFY BEYOND THIS POINT ********************
 ###########################################################################
 -include $(OVERRIDECC)/$(occ).mk
--include $(OVERRIDELP)/$(ov).mk
+-include $(OVERRIDEST)/$(ov).mk
 ###########################################################################
 # BUILD/RUN OPERATIONS // DO NOT MODIFY BEYOND THIS POINT *****************
 ###########################################################################
-all: sp dp 
+all: bin 
 run: all 
-	@echo "SINGLE PRECISION************************************"
-	@$(SPOUT) $(n)
-	@echo "DOUBLE PRECISION************************************"
-	@$(DPOUT) $(n)
-	@echo "****************************************************"
+	@$(OUT)
 dirs:
 	@mkdir -p $(BDIR)
 ###########################################################################
 # EXECUTABLE BUILD/RUN OPTIONS // DO NOT MODIFY BEYOND THIS POINT *********
 ###########################################################################
-sp: dirs $(INPUT) 
-	$(CC) $(CFLAGS) $(XFLAGS) $(LFLAGS) $(DFLAG)SP $(INPUT) $(OFLAG) $(SPOUT)
-dp: dirs $(INPUT) 
-	$(CC) $(CFLAGS) $(XFLAGS) $(LFLAGS) $(DFLAG)DP $(INPUT) $(OFLAG) $(DPOUT) 
+bin: dirs $(INPUT) 
+	$(CC) $(CFLAGS) $(XFLAGS) $(DFLAG)$(DARRS)=$(n) $(INPUT) $(OFLAG) $(OUT)
 ###########################################################################
 # FILESYSTEM CLEANUP OPERATIONS // DO NOT MODIFY BEYOND THIS POINT ********
 ###########################################################################
 clean:
-	@rm -f $(SPOUT) $(DPOUT) core a.out *.o
+	@rm -f $(OUT) core a.out *.o
 	@rm -f $(BDIR)/*
 	@rmdir $(BDIR)
 ###########################################################################
