--- a/whetstone/makefile
+++ b/whetstone/makefile
@@ -59,9 +59,9 @@ bin: dirs $(INPUT)
 # FILESYSTEM CLEANUP OPERATIONS // DO NOT MODIFY BEYOND THIS POINT ********
 ###########################################################################
 clean:
-	@rm -f $(OUT) core a.out *.o
-	@rm -f $(BDIR)/*
-	@rmdir $(BDIR)
+	@-rm -f $(OUT) core a.out *.o
+	@-rm -f $(BDIR)/*
+	@-rmdir $(BDIR)
 ###########################################################################
 # END OF MAKEFILE *********************************************************
 ###########################################################################
