HINT data type and default updates

--- a/hint/makefile
+++ b/hint/makefile
@@ -35,6 +35,11 @@ IDIR	   = ./include
 INPUT = $(SDIR)/hint.c $(SDIR)/hkernel.c
 OUT =   $(BDIR)/hint
 ###########################################################################
+# MISCELLANEOUS OPTIONS ***************************************************
+###########################################################################
+runtime=1.0
+dtype=double
+###########################################################################
 # OVERRIDE INCLUDES // DO NOT MODIFY BEYOND THIS POINT ********************
 ###########################################################################
 -include $(OVERRIDECC)/$(occ).mk
