CoreMark modifications to better support IBM VisualAge C and GCC 2.95 on AIX

--- a/coremark/makefile
+++ b/coremark/makefile
@@ -6,7 +6,7 @@ threads     = 1
 multithread = USE_PTHREAD -pthread
 # multithread = USE_FORK
 memory      = "\"Heap\""
-pointer     = uintptr_t
+pointer     = -DUINTPTR_TYPE
 
 ##############################################################################
 # DO NOT MODIFY BEYOND THIS POINT                                            #
