Fix coremark makefile having wrong default setting for using uintptr_t

--- a/coremark/makefile
+++ b/coremark/makefile
@@ -6,7 +6,7 @@ threads     = 1
 multithread = USE_FORK
 # multithread = USE_PTHREAD -pthread
 # multithread = DUMMY_NO_MULTITHREAD # if neither fork nor pthread is supported
-pointer     = USE_UINTPTR
+pointer     = UINTPTR_TYPE
 # pointer    = DUMMY_NO_PTR # to just use the default
 memory      = "\"Main memory (heap)\""
 # XCFLAGS += -lrt # for older versions of libc
