Fix flags order in makefiles

--- a/linpack/makefile
+++ b/linpack/makefile
@@ -15,7 +15,7 @@ BINDIR = ./bin
 OUT    = $(BINDIR)/linpack
 INPUT  = ./src/linpack.c
 # ----------------------------------------------------------------------------
-CARGS  += $(OPTLEVEL) $(CFLAGS) $(XCFLAGS) $(INPUT) -o$(OUT)
+CARGS  += $(OPTLEVEL) $(XCFLAGS) $(INPUT) -o$(OUT) $(CFLAGS)
 # ----------------------------------------------------------------------------
 # ----------------------------------------------------------------------------
 all: bin 
