--- a/dhrystone/makefile
+++ b/dhrystone/makefile
@@ -17,7 +17,7 @@ BINDIR = ./bin
 OUT    = $(BINDIR)/dhrystone
 INPUT  = ./src/dhry_1.c ./src/dhry_2.c
 # ----------------------------------------------------------------------------
-CARGS  += $(OPTLEVEL) $(CFLAGS) $(XCFLAGS) $(INPUT)
+CARGS  += $(OPTLEVEL) $(INPUT) $(CFLAGS) $(XCFLAGS)
 # ----------------------------------------------------------------------------
 LOGDIR = ./log
 RUNLOG = "$(LOGDIR)/run-$(cc).txt"
