--- a/hint/makefile
+++ b/hint/makefile
@@ -16,7 +16,7 @@ BINDIR     = ./bin
 OUT        = $(BINDIR)/hint
 INPUT      = ./src/hint.c ./src/hkernel.c
 # ----------------------------------------------------------------------------
-CARGS = $(OPTLEVEL) $(CFLAGS) $(XCFLAGS) $(INPUT) 
+CARGS = $(OPTLEVEL) $(INPUT) $(CFLAGS) $(XCFLAGS) 
 # ----------------------------------------------------------------------------
 DATADIR = ./data
 # ----------------------------------------------------------------------------
