--- a/whetstone/makefile
+++ b/whetstone/makefile
@@ -15,7 +15,7 @@ BINDIR = ./bin
 OUT    = $(BINDIR)/whetstone
 INPUT  = ./src/whetstone.c
 # ----------------------------------------------------------------------------
-CARGS  += -o$(OUT) $(OPTLEVEL) $(CFLAGS) $(XCFLAGS) $(INPUT)
+CARGS  += -o$(OUT) $(OPTLEVEL) $(INPUT) $(CFLAGS) $(XCFLAGS)
 # ----------------------------------------------------------------------------
 all: bin 
 run: all
